--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+out
 .gradle
 /build/
 
@@ -10,5 +11,5 @@ gradle-app.setting
 # Cache of project
 .gradletasknamecache
 
-# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
-# gradle/wrapper/gradle-wrapper.properties
+# Hide idea
+.idea
